--- a/cssdemo.html
+++ b/cssdemo.html
@@ -51,6 +51,24 @@
           <a href="mediaQueryDemo.html">Media Query Demo</a>
         </li>
       </ul>
+      <!--seconday nav (small screen)-->
+      <div class="dropdown show secondayNav">
+        <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown button
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="index.html">Home</a>
+          <a class="dropdown-item" href="heading.html">Heading Demo</a>
+          <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+          <a class="dropdown-item" href="unorderedlist.html">Unordered List Demo</a>
+          <a class="dropdown-item" href="Ordered List.html">Ordered List Demo</a>
+          <a class="dropdown-item" href="tabledemo1.html">Table Demo 1</a>
+          <a class="dropdown-item" href="tabledemo2.html">Table Demo 2</a>
+          <a class="dropdown-item active" href="cssdemo.html">CSS Demo</a>
+          <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+          <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+          <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+        </div>
       <h1 class = "blue">MAKE ME BLUE</h1>
       <h1 class = "purple">MAKE ME PURPLE</h1>
       <h1 class = "red">MAKE ME RED</h1>
@@ -58,6 +76,7 @@
       <h1 class = "alignCenter">CENTER</h1>
       <h1 class = "alignRight">RIGHT</h1>
       <h1 class = "alignCenter white blackBackground">White Text on Black Background</h1>
+      </div>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>        
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
