--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -50,7 +50,7 @@
         </ul>
 
         <!--seconday nav (small screen)-->
-        <div class="dropdown show secondayNav">
+        <div class="dropdown show secondaryNav">
           <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown button
           </button>
