--- a/Ordered List.html
+++ b/Ordered List.html
@@ -10,6 +10,59 @@
     <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
+      <ul class = "nav nav-pills nav-fill primaryNav">
+        <li class = "nav-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class = "nav-item">
+          <a href="heading.html">Heading Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="textdemo.html">Text Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="unorderedlist.html">Unordered List Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a class="nav-link active" aria-current="page" href="Ordered List.html">Ordered List Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="tabledemo1.html">Table Demo 1</a>
+        </li>
+        <li class = "nav-item">
+          <a href="tabledemo2.html">Table Demo 2</a>
+        </li>
+        <li class = "nav-item">
+          <a href="cssdemo.html">CSS Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="travel.html">Dream Vacation Page</a>
+        </li>
+        <li class = "nav-item">
+          <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="mediaQueryDemo.html">Media Query Demo</a>
+        </li>
+      </ul>
+       <!--seconday nav (small screen)-->
+    <div class="dropdown show secondayNav">
+      <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Dropdown button
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="index.html">Home</a>
+        <a class="dropdown-item" href="heading.html">Heading Demo</a>
+        <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+        <a class="dropdown-item" href="unorderedlist.html">Unordered List Demo</a>
+        <a class="dropdown-item active" href="Ordered List.html">Ordered List Demo</a>
+        <a class="dropdown-item" href="tabledemo1.html">Table Demo 1</a>
+        <a class="dropdown-item" href="tabledemo2.html">Table Demo 2</a>
+        <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
+        <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+        <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+        <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+      </div>
       <p>This is a demo of a Numbered List</p>
       <ol>
         <li>Thing</li>
@@ -51,41 +104,8 @@
       <li>Sub-Item</li>
       <li>And Another One</li>
     </ol>
-    <ul class = "nav nav-pills nav-fill primaryNav">
-      <li class = "nav-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class = "nav-item">
-        <a href="heading.html">Heading Demo</a>
-      </li>
-      <li class = "nav-item">
-        <a href="textdemo.html">Text Demo</a>
-      </li>
-      <li class = "nav-item">
-        <a href="unorderedlist.html">Unordered List Demo</a>
-      </li>
-      <li class = "nav-item">
-        <a class="nav-link active" aria-current="page" href="Ordered List.html">Ordered List Demo</a>
-      </li>
-      <li class = "nav-item">
-        <a href="tabledemo1.html">Table Demo 1</a>
-      </li>
-      <li class = "nav-item">
-        <a href="tabledemo2.html">Table Demo 2</a>
-      </li>
-      <li class = "nav-item">
-        <a href="cssdemo.html">CSS Demo</a>
-      </li>
-      <li class = "nav-item">
-        <a href="travel.html">Dream Vacation Page</a>
-      </li>
-      <li class = "nav-item">
-        <a href="bootstrapdemo.html">Bootstrap Demo</a>
-      </li>
-      <li class = "nav-item">
-        <a href="mediaQueryDemo.html">Media Query Demo</a>
-      </li>
-    </ul>
+   
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>        
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
